netdata/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-proxy
  namespace: netdata
  labels:
    app: oauth-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-proxy
  template:
    metadata:
      labels:
        app: oauth-proxy
    spec:
      containers:
      - name: oauth-proxy
        image: quay.io/pusher/oauth2_proxy:v5.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4180
          name: proxy
        args:
        - --http-address=:4180
        - --https-address=
        - --provider=github
        - --email-domain=*
        - --github-org=srueg-labs
        - --upstream=file:///dev/null
        livenessProbe:
          initialDelaySeconds: 30
          httpGet:
            path: /ping
            port: proxy
        readinessProbe:
          httpGet:
            path: /ping
            port: proxy
