netdata/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netdata
  namespace: netdata
  labels:
    app: netdata
spec:
  type: ClusterIP
  ports:
    - name: proxy
      port: 80
      targetPort: proxy
  selector:
    app: netdata
